# CoreUtils

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  premake5.lua
examples/: ex_getOS.c  ex_getSpecificSystem.c  example.cxx
include/coreutils/: library.h  osDetection.h
src/: library.c  osDetection.c
